--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <h1>Intoduction to Front-end Developement </h1>
 
-<p> A front-end developer architects and develops client part of websites and aplications using web technologies (languages):</p>
+<p> Ovim putem pravim repozitorijum za Assignment i obelezavam sleed'i tekst razlicitim bojama:</p>
 <ul>
-    <li style="color:red;">HTML</li>
-    <li style="color:green;">CSS</li>
-    <li style="color:blue;">JavaScript</li>
-    <li>PHP</li>
+    <li style="color:orange;">Front</li>
+    <li style="color:green;">end</li>
+    <li style="color:purple;">Development</li>
+    <li>javaScript</li>
 </ul>
