--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Intoduction to Front-end Developement </h1>
 
-<p> Ovim putem pravim repozitorijum za Assignment i obelezavam sleed'i tekst razlicitim bojama:</p>
+<p> Ovim putem pravim repozitorijum za Assignment i obelezavam sledeci tekst razlicitim bojama:</p>
 <ul>
     <li style="color:orange;">Front</li>
     <li style="color:green;">end</li>
